--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.yuting</groupId>
-  <artifactId>yuting</artifactId>
+  <groupId>org.five</groupId>
+  <artifactId>five</artifactId>
   <packaging>jar</packaging>
   <version>1.0.0-SNAPSHOT</version>
-  <name>yuting</name>
+  <name>five</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
